<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:elevation="10dp"
    android:padding="5dp"
    app:cardBackgroundColor="@color/teal_200"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_account"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="115dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name_of_the_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/email_of_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/status_of_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>


</androidx.cardview.widget.CardView>