<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgProfileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/user"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <ImageView
        android:id="@+id/imgAddProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/add" />

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_account"
        android:hint="Enter your name :"
        android:padding="10dp"
        android:textColor="@color/myColor13"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/enter_name"
        android:visibility="gone"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="26dp"
        android:textColorHint="@color/myColor2"
        app:boxStrokeColor="@color/myColor2"
        app:endIconMode="clear_text"
        app:endIconTint="@color/myColor2"
        app:startIconTint="@color/myColor2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtProfileStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_status"
        android:hint="@string/enter_your_status"
        android:padding="10dp"
        android:textColor="@color/myColor13"
        android:textSize="18sp"
        android:textStyle="bold" />
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileStatus"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/enter_status"
        android:textColorHint="@color/myColor2"
        app:boxStrokeColor="@color/myColor2"
        app:endIconMode="clear_text"
        app:endIconTint="@color/myColor2"
        app:startIconTint="@color/myColor2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/enter_your_email"
        android:padding="10dp"
        android:textColor="@color/myColor13"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_marginTop="26dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/enter_e_mail"
        android:textColorHint="@color/myColor2"
        app:boxStrokeColor="@color/myColor2"
        app:endIconMode="clear_text"
        app:endIconTint="@color/myColor2"
        app:startIconTint="@color/myColor2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:background="@color/myCOlor12"
        android:padding="10dp"
        android:text="Update"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:background="@color/myColor13"
        android:padding="10dp"
        android:text="Save Changes"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/profileProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </RelativeLayout>
</LinearLayout>